# syntree-generator

./: .gitignore  CLAUDE.md  ISSUES.md  Makefile  README.org  gutenberg.org  publish.el  pyproject.toml  setup-shot-scraper.sh  sexp-grammar-examples.org  shot-scraper.yml
.emacs.d/: init.el
data/: README.md
examples/: complex_1.lisp  complex_2.lisp  complex_3.lisp  complex_4.lisp  complex_5.lisp  diverse_examples.lisp  extract_examples.el  medium_1.lisp  medium_2.lisp  medium_3.lisp  medium_4.lisp  medium_5.lisp  simple_1.lisp  simple_2.lisp  simple_3.lisp  simple_4.lisp  simple_5.lisp  very_complex_1.lisp  very_complex_2.lisp  very_complex_3.lisp  very_complex_4.lisp  very_complex_5.lisp
public/: index.html
syntree_generator/: __init__.py  cli.py  parser.py
tests/: test_parser.py
