[tool.poetry]
name = "syntree-generator"
version = "0.1.0"
description = "A tool to convert text to S-expression syntax trees"
authors = ["Jason Walsh <j@wal.sh>"]
readme = "README.org"
packages = [{include = "syntree_generator"}]
repository = "https://github.com/jwalsh/syntree-generator"
homepage = "https://github.com/jwalsh/syntree-generator"

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^3.5.0"
tqdm = "^4.64.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
syntree = "syntree_generator.cli:main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88